#Feature support curriculum for gray terminations

--- a/humanoidverse/config/env/locomotion.yaml
+++ b/humanoidverse/config/env/locomotion.yaml
@@ -35,6 +35,15 @@ env:
       termination_gravity_x : 0.8
       termination_gravity_y : 0.8
 
+    termination_curriculum:
+      terminate_by_gravity_curriculum: False
+      termination_gravity_x_max_limit: 0.8
+      termination_gravity_x_min_limit: 0.5
+      termination_gravity_y_max_limit: 0.8
+      termination_gravity_y_min_limit: 0.5
+      termination_gravity_curriculum_degree: 0.00000025
+      termination_gravity_curriculum_level_down_threshold: 40
+      termination_gravity_curriculum_level_up_threshold: 60
 
 
 # Globally accessible parameters
